# HyprBoard

./: Cargo.toml  README.md  config.json
.github/workflows/: rust.yml
src/: config.rs  main.rs
src/core/: mod.rs  presets.rs  waybar_action.rs
src/plugins/: mod.rs
src/plugins/hyprland/: mod.rs
src/plugins/hyprland/helpers/: config_loader.rs  dispatchers.rs  migration.rs  mod.rs  schema.rs  types.rs
src/plugins/hyprland/view/: env.rs  exec.rs  gestures.rs  keybinds.rs  layer_rules.rs  mod.rs  modal.rs  monitors.rs  presets.rs  window_rules.rs
src/plugins/hyprlock/: mod.rs  schema.rs
src/plugins/themes/: mod.rs
src/plugins/waybar/: css_parser.rs  mod.rs  parser.rs  presets_view.rs  schema.rs  tests.rs
src/utils/: mod.rs
src/utils/hyprlang/: ast.rs  lexer.rs  mod.rs  parser.rs  tests.rs  token.rs
src/view/components/: badge.rs  button.rs  card.rs  checkbox.rs  color_picker.rs  color_utils.rs  dropdown.rs  file_picker.rs  mod.rs  modal.rs  schema_renderer.rs  section.rs  setting_row.rs  slider.rs  text_input.rs  theme.rs  toast.rs  toggle.rs  tooltip.rs
