[package]
name = "HyprBoard"
version = "0.1.0"
edition = "2024"

[dependencies]
fuzzy-matcher = "0.3.7"
glob = "0.3.3"
iced = { version = "0.14.0", features = ["tokio", "canvas"] }
lazy_static = "1.5.0"
num-traits = "0.2.19"
regex = "1.12.2"
rfd = "0.16"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
thiserror = "2.0.17"
tokio = { version = "1", features = ["time"] }
